--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
             <div class="reting" id="rating">     
                     <div class="form">
                         <img src="icons/very_bed.png" alt="">
-                            <div class="result_f" id="result_v_b" >1</div>
+                            <div class="result_f" id="result_v_b" >5</div>
                         <input id="radio-1" type="radio" name="radio" value="value1">
                         <label for="radio-1">VERY BED</label>
                     </div>
                     <div class="form">
                         <img src="icons/bed.png" alt="">
-                            <div class="result_f" id="result_b">2</div>
+                            <div class="result_f" id="result_b">5</div>
                         <input id="radio-2" type="radio" name="radio" value="value2">
                         <label for="radio-2">BED</label>
                     </div>
                     <div class="form">
                         <img src="icons/so_so.png" alt="">
-                             <div class="result_f" id="result_s">3</div>
+                             <div class="result_f" id="result_s">5</div>
                         <input id="radio-3" type="radio" name="radio" value="value3">
                         <label for="radio-3">SO SO</label>
                     </div>
                     <div class="form">
                         <img src="icons/good.png" alt="">
-                            <div class="result_f" id="result_g" value="4">4</div>
+                            <div class="result_f" id="result_g">5</div>
                         <input id="radio-4" type="radio" name="radio" value="value4">
                         <label for="radio-4">GOOD</label>
                     </div> 
