--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <img src="image/logo12.png" alt>
         </i>
         <div class="button footer_button1" id="button footer_button1">
-            <a href="">Зворотній зв'язок</a>
+            <a href="https://github.com/Vitaliy-Sotnyk/CybersportGuide/blob/main/comunication/comunication.html">Зворотній зв'язок</a>
         </div>
         <div class="icon" id="icon">
             <i class="icon icon_facebook" id="icon icon_facebook">
