--- a/comunication/comunication.html
+++ b/comunication/comunication.html
@@ -21,7 +21,7 @@
                     <a href="">Новини</a>  
                 </div>
                 <div class="button header_button3" id="button header_button3">
-                    <a href="">Рекомендації</a>
+                    <a href="">Гайди</a>
                 </div>
                 <div class="button header_button4"id="button header_button4">
                     <a href="">Поради</a>  
@@ -46,8 +46,8 @@
                     <p><span>Доброго дня, шановний користувач нашого сайту!</span></p>
                     <p>З допомоги форми зворотнього зв'язку, що знаходиться нижче, Ви можете відправити нам лист на тему, що вас тривожить. Протягом 3 діб ми ознайомимось з ним і обов'язково напишимо Вам відповідь на нього. Дуже дякуємо, що вибрали саме нас.</p>
                </div>
-                    <form method="POST" class="form">
-                        <div class="igroup" class="form">
+                    <form method="POST" class="form_comuniation">
+                        <div class="igroup">
                         <div class="communication" id="communication">
                             <img src="../icons/icons8-user-male.png"  alt>
                             <input type="text" maxlength="40" name="name" class="communication_input" placeholder="Введіть ім'я та прізвище"> 
@@ -111,7 +111,7 @@
                 <img src="../image/logo12.png" alt>
         </i>
         <div class="button footer_button1" id="button footer_button1">
-            <a href="https://github.com/Vitaliy-Sotnyk/CybersportGuide/blob/main/comunication/comunication.html">Зворотній зв'язок</a>
+            <a href="">Зворотній зв'язок</a>
         </div>
         <div class="icon" id="icon">
             <i class="icon icon_facebook" id="icon icon_facebook">
