--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="">Новини</a>  
                 </div>
                 <div class="button header_button3" id="button header_button3">
-                    <a href="">Рекомендації</a>
+                    <a href="">Гайди</a>
                 </div>
                 <div class="button header_button4"id="button header_button4">
                     <a href="">Поради</a>  
@@ -41,52 +41,28 @@
     <div class="main  wrap" id="main">   
         <div class="content" id="content">
             <div class="information" id="information">
-                <p style="height:1000px">Інфа </br>
-                </p>
-            </div>
-            <div class="reting" id="rating">    
-                <form> 
-                    <div class="form">
-                        <img src="icons/very_bed.png" alt="">
-                            <div class="result_f" id="result_v_b" >1</div>
-                        <input id="radio-1" type="radio" name="radio" value="value1">
-                        <label for="radio-1">VERY BED</label>
+                <div class="first_page" id="first_page">
+                    <div class="fist_page_text1" id="first_page_text1">
+                        </br> <p> <span> 7 вересня 2020 року </span> , комісією з визнання видів спорту було внесено кіберспорт до офіціних видів спорту України. Про це було повдомлено Ферерацією кіберспорту України. 
+                            </br></p>
+                            <p>Взагалі кіберспорт, або як його ще називають електронний спорт - це вид спортивних змагань у середовищі відеоігор.
+                                </br></p>
+
                     </div>
-                    <div class="form">
-                        <img src="icons/bed.png" alt="">
-                            <div class="result_f" id="result_b">2</div>
-                        <input id="radio-2" type="radio" name="radio" value="value2">
-                        <label for="radio-2">BED</label>
+                    <div class="first_page_img">
+                        <img src="image/image_for_first_page.jpg" alt="">
                     </div>
-                    <div class="form">
-                        <img src="icons/so_so.png" alt="">
-                             <div class="result_f" id="result_s">3</div>
-                        <input id="radio-3" type="radio" name="radio" value="value3">
-                        <label for="radio-3">SO SO</label>
-                    </div>
-                    <div class="form">
-                        <img src="icons/good.png" alt="">
-                            <div class="result_f" id="result_g" value="4">4</div>
-                        <input id="radio-4" type="radio" name="radio" value="value4">
-                        <label for="radio-4">GOOD</label>
-                    </div> 
-                    <div class="form">
-                        <img src="icons/very good.png" alt="">
-                            <div class="result_f" id="result_v_g" >5</div>
-                        <input id="radio-5" type="radio" name="radio" value="value5">
-                        <label for="radio-5">VERY GOOD</label>
-                    </div> 
-                    <div class="submit_reset" id="submit_reset">
-                        <div class="submit">
-                             <input type="button" value="Тикай" name="submit" id="submit" onclick="check()"> 
-                         </div>
-                         <div class="reset">
-                              <input  type="button" value="Нетикай" name="reset" id="reset" onclick="escaped()">
-                         </div>
-                     </div>
-                <script src="js/reting.js" >
-                </script>
-                </form>>
+                        </div>
+                        <div class="first_page_text2" id="first_page_text2">
+                            <p> З метою популяризації даного виду спорту серед україноовної території і був розроблений цей сайт-довідка.
+                            </br></p> 
+                            <p> Першочерговою нашою задачею є допомогти розвинути гравцям свої навички. Відомо, що кіберспортсмен потребує високої концентрації зору та рухів, а також велика ставка на швидку реакцію. Щоб допомогти розвинутись, якраз і існуємо ми.                      
+                            </br></p>  
+                            <p> Як уже помітно на даному сайті Ви зможете переглянути новини кіберспорту та ігрової індустрії, переглянути рекомендації та поради, як для ігор і не тільки, найти цікаву для себе гру, або стрім.
+                            </br></p>
+                            <p> А якщо не знаєте, що пограти перейдіть до нашого <span> генератора ігор </span> який вам неодмінно допоможе найти те, що Ви так бажаєте зіграти.
+                            </br></p>
+                        </div>
             </div>
         </div>          
         <div class="news_line" id="news_line">
@@ -122,7 +98,7 @@
                 <img src="image/logo12.png" alt>
         </i>
         <div class="button footer_button1" id="button footer_button1">
-            <a href="https://github.com/Vitaliy-Sotnyk/CybersportGuide/blob/main/comunication/comunication.html">Зворотній зв'язок</a>
+            <a href="">Зворотній зв'язок</a>
         </div>
         <div class="icon" id="icon">
             <i class="icon icon_facebook" id="icon icon_facebook">
