--- a/tutorial/tips_to_improve_the_game_CS_GO.html
+++ b/tutorial/tips_to_improve_the_game_CS_GO.html
@@ -21,7 +21,7 @@
                     <a href="">Новини</a>  
                 </div>
                 <div class="button header_button3" id="button header_button3">
-                    <a href="">Рекомендації</a>
+                    <a href="">Гайди</a>
                 </div>
                 <div class="button header_button4"id="button header_button4">
                     <a href="">Поради</a>  
