--- a/games/The_Elder_Scrolls_V_Skyrim.html
+++ b/games/The_Elder_Scrolls_V_Skyrim.html
@@ -43,7 +43,7 @@
                 <div class="information" id="information">
                                 <div class="title_autor_img" id="title_autor_img">
                                     <div class="title_autor" id="title_autor">
-                                            <h2><span>Поради, які допоможуть поліпшити свою гру в CS: GO</span></h2>
+                                            <h2><span>The  Elder Scrolls V:Skyrim</span></h2>
                                         <div class="autors" id="autors">
                                                 <p>Джерело: <span><a href="https://cyberspark.ru/"> store.steampowered.com</a></span></p>
                                         </div>    
