--- a/games/The_Elder_Scrolls_V_Skyrim.html
+++ b/games/The_Elder_Scrolls_V_Skyrim.html
@@ -15,16 +15,16 @@
         </header>
         <div class="header_top" id="header_top">
                 <div class="button header_button1" id="button header_button1">
-                    <a href="">Головна</a>
+                    <a href="../project/index.html">Головна</a>
                 </div>
                 <div class="button header_button2"id="button header_button2">
                     <a href="">Новини</a>  
                 </div>
                 <div class="button header_button3" id="button header_button3">
-                    <a href="">Рекомендації</a>
+                    <a href="">Гайди</a>
                 </div>
                 <div class="button header_button4"id="button header_button4">
-                    <a href="">Поради</a>  
+                    <a href="../project/advices/advices.html">Поради</a>  
                 </div>
                 <div class="button header_button5" id="button header_button5">
                     <a href="">Популярні стріми</a>
@@ -33,9 +33,9 @@
                     <a href="">Популярні ігри</a>  
                 </div>
                 <div class="button header_button7" id="button header_button7">
-                    <a href="">Генератор ігор</a>
+                    <a href="../project/generator/generation.html">Генератор ігор</a>
                 </div>
-            </div>     
+            </div>        
              
     </div>
     <div class="main  wrap" id="main">   
@@ -93,10 +93,10 @@
                             </div> 
                             <div class="submit_reset" id="submit_reset">
                                 <div class="submit">
-                                     <input type="button" value="Тикай" name="submit" id="submit" onclick="check()"> 
+                                     <input type="button" value="Готово" name="submit" id="submit" onclick="check()"> 
                                  </div>
                                  <div class="reset">
-                                      <input  type="button" value="Нетикай" name="reset" id="reset" onclick="escaped()">
+                                      <input  type="button" value="Відмінити" name="reset" id="reset" onclick="escaped()">
                                  </div>
                              </div>
                         <script src="../js/reting.js" >
