--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
         <div class="header_top" id="header_top">
                 <div class="button header_button1" id="button header_button1">
-                    <a href="">Головна</a>
+                    <a href="../project/index.html">Головна</a>
                 </div>
                 <div class="button header_button2"id="button header_button2">
                     <a href="">Новини</a>  
@@ -24,7 +24,7 @@
                     <a href="">Гайди</a>
                 </div>
                 <div class="button header_button4"id="button header_button4">
-                    <a href="">Поради</a>  
+                    <a href="../project/advices/advices.html">Поради</a>  
                 </div>
                 <div class="button header_button5" id="button header_button5">
                     <a href="">Популярні стріми</a>
@@ -33,7 +33,7 @@
                     <a href="">Популярні ігри</a>  
                 </div>
                 <div class="button header_button7" id="button header_button7">
-                    <a href="">Генератор ігор</a>
+                    <a href="../project/generator/generation.html">Генератор ігор</a>
                 </div>
             </div>     
              
