--- a/generator/generation.html
+++ b/generator/generation.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
 	<meta name="vieport" content="inital-scale=1.0, width=device-width">
-    <title>Довідник Кіберспортсмена</title>
+    <title>Генератор Кіберспортсмена</title>
     <link rel="stylesheet" href="../css/style.css">
      <link rel="shortcut icon" href="../icons/favicon.ico" type="x-icon">
     </head>
@@ -15,7 +15,7 @@
         </header>
         <div class="header_top" id="header_top">
                 <div class="button header_button1" id="button header_button1">
-                    <a href="">Головна</a>
+                    <a href="../project/index.html">Головна</a>
                 </div>
                 <div class="button header_button2"id="button header_button2">
                     <a href="">Новини</a>  
@@ -24,7 +24,7 @@
                     <a href="">Гайди</a>
                 </div>
                 <div class="button header_button4"id="button header_button4">
-                    <a href="">Поради</a>  
+                    <a href="../project/advices/advices.html">Поради</a>  
                 </div>
                 <div class="button header_button5" id="button header_button5">
                     <a href="">Популярні стріми</a>
@@ -33,9 +33,9 @@
                     <a href="">Популярні ігри</a>  
                 </div>
                 <div class="button header_button7" id="button header_button7">
-                    <a href="">Генератор ігор</a>
+                    <a href="../project/generator/generation.html">Генератор ігор</a>
                 </div>
-            </div>     
+            </div>      
              
     </div>
     <div class="main  wrap" id="main">   
