--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
         <header class="wrap header_wrap">  
         </header>
         <div class="header_top" id="header_top">
-                <div class="button header_button1" id="button header_button1">
-                    <a href="../project/index.html">Головна</a>
-                </div>
-                <div class="button header_button2"id="button header_button2">
-                    <a href="">Новини</a>  
-                </div>
-                <div class="button header_button3" id="button header_button3">
-                    <a href="">Гайди</a>
-                </div>
-                <div class="button header_button4"id="button header_button4">
-                    <a href="../project/advices/advices.html">Поради</a>  
-                </div>
-                <div class="button header_button5" id="button header_button5">
-                    <a href="">Популярні стріми</a>
-                </div>
-                <div class="button header_button6"id="button header_button6">
-                    <a href="">Популярні ігри</a>  
-                </div>
-                <div class="button header_button7" id="button header_button7">
-                    <a href="../project/generator/generation.html">Генератор ігор</a>
-                </div>
-            </div>     
+            <div class="button header_button1" id="button header_button1">
+                <a href="index.html">Головна</a>
+            </div>
+            <div class="button header_button2"id="button header_button2">
+                <a href="news/news.html">Новини</a>  
+            </div>
+            <div class="button header_button3" id="button header_button3">
+                <a href="tutorials/tutorials.html">Гайди</a>
+            </div>
+            <div class="button header_button4"id="button header_button4">
+                <a href="advices/advices.html">Поради</a>  
+            </div>
+            <div class="button header_button5" id="button header_button5">
+                <a href="video/video.html">Популярні стріми</a>
+            </div>
+            <div class="button header_button6"id="button header_button6">
+                <a href="games/games.html">Популярні ігри</a>  
+            </div>
+            <div class="button header_button7" id="button header_button7">
+                <a href="generator/generation.html">Генератор ігор</a>
+            </div>
+        </div>  
              
     </div>
     <div class="main  wrap" id="main">   
@@ -98,7 +98,7 @@
                 <img src="image/logo12.png" alt>
         </i>
         <div class="button footer_button1" id="button footer_button1">
-            <a href="">Зворотній зв'язок</a>
+            <a href="comunication/comunication.html">Зворотній зв'язок</a>
         </div>
         <div class="icon" id="icon">
             <i class="icon icon_facebook" id="icon icon_facebook">
@@ -122,7 +122,7 @@
                 </a>
             </i>
         </div>
-        <p>Всі дані на сайті представлені вичключно для ознайомлення.<br>
+        <p>Всі дані представлені виключно для ознайомлення.<br>
             Усі права захищені.
         @ 2021</p>        
     </div>                           
