--- a/advices/advices.html
+++ b/advices/advices.html
@@ -14,28 +14,28 @@
         <header class="wrap header_wrap">  
         </header>
         <div class="header_top" id="header_top">
-                <div class="button header_button1" id="button header_button1">
-                    <a href="">Головна</a>
-                </div>
-                <div class="button header_button2"id="button header_button2">
-                    <a href="">Новини</a>  
-                </div>
-                <div class="button header_button3" id="button header_button3">
-                    <a href="">Гайди</a>
-                </div>
-                <div class="button header_button4"id="button header_button4">
-                    <a href="">Поради</a>  
-                </div>
-                <div class="button header_button5" id="button header_button5">
-                    <a href="">Популярні стріми</a>
-                </div>
-                <div class="button header_button6"id="button header_button6">
-                    <a href="">Популярні ігри</a>  
-                </div>
-                <div class="button header_button7" id="button header_button7">
-                    <a href="">Генератор ігор</a>
-                </div>
-            </div>     
+            <div class="button header_button1" id="button header_button1">
+                <a href="../index.html">Головна</a>
+            </div>
+            <div class="button header_button2"id="button header_button2">
+                <a href="../news/news.html">Новини</a>  
+            </div>
+            <div class="button header_button3" id="button header_button3">
+                <a href="../tutorials/tutorials.html">Гайди</a>
+            </div>
+            <div class="button header_button4"id="button header_button4">
+                <a href="../advices/advices.html">Поради</a>  
+            </div>
+            <div class="button header_button5" id="button header_button5">
+                <a href="../video/video.html">Популярні стріми</a>
+            </div>
+            <div class="button header_button6"id="button header_button6">
+                <a href="../games/games.html">Популярні ігри</a>  
+            </div>
+            <div class="button header_button7" id="button header_button7">
+                <a href="../generator/generation.html">Генератор ігор</a>
+            </div>
+        </div>        
              
     </div>
     <div class="main  wrap" id="main">   
@@ -43,55 +43,88 @@
             <div class="information" id="information">
                 <table class="adviced_table" id="adviced_table">
                     <tr>
-                    <td>
-                        <a href="">
+                    <td><a href="">
                         <div class="advices_info" id="advices_info">
-                            <span class="title_article">Поради, які допоможуть поліпшити свою гру в CS: GO</span>
-                            <span class="anotation_article"> Багато гравців в якийсь момент часу зупиняються в розвитку. На цьому етапі багато закидають гру. Однак не варто приймати поспішні рішення. Досить прочитати поради, які допоможуть вам поліпшити свою гру в CS: GO.</span>
+                            <p><span>DOTA2</span>
+                            </p>
                         </div>
-                        <img src="tips_to_improve_the_game_CS_GO/csgo.jpg" alt="">
+                        <img src="dota/dota_logo.png" alt="">
                     </a>
                     </td>
                     <td><a href="">
                             <div class="advices_info" id="advices_info">
-                                <span class="title_article">Поради, які допоможуть поліпшити свою гру в CS: GO</span>
-                                <span class="anotation_article"> Багато гравців в якийсь момент часу зупиняються в розвитку. На цьому етапі багато закидають гру. Однак не варто приймати поспішні рішення. Досить прочитати поради, які допоможуть вам поліпшити свою гру в CS: GO.</span>
-                            </div>
-                            <img src="cs_go_grown_fps/growen_fps.jpg" alt="">
+                                <p><span>Counter-Strike: Global Offensive</span>
+                            </p></div>
+                            <img src="cs_go/csgo.jpg" alt="">
                         </a></td>
                     <td><a href="">
                             <div class="advices_info" id="advices_info">
-                                <span class="title_article">Поради, які допоможуть поліпшити свою гру в CS: GO</span>
-                                <span class="anotation_article"> Багато гравців в якийсь момент часу зупиняються в розвитку. На цьому етапі багато закидають гру. Однак не варто приймати поспішні рішення. Досить прочитати поради, які допоможуть вам поліпшити свою гру в CS: GO.</span>
-                            </div>
-                            <img src="legends_of_runeterre_best_deck_of_cards/cards.jpg" alt="">
+                                <p><span>League of Legends</span>
+                            </p></div>
+                            <img src="league_of_legends/league_of_legends.jpg" alt="">
                         </a></td>
                     </tr>
                     <tr>
-                            <td>
-                                <a href="">
-                                <div class="advices_info" id="advices_info">
-                                    <span class="title_article">Поради, які допоможуть поліпшити свою гру в CS: GO</span>
-                                    <span class="anotation_article"> Багато гравців в якийсь момент часу зупиняються в розвитку. На цьому етапі багато закидають гру. Однак не варто приймати поспішні рішення. Досить прочитати поради, які допоможуть вам поліпшити свою гру в CS: GO.</span>
-                                </div>
-                                <img src="guns_in_CS_Go/guns.jpg" alt="">
-                            </a>
-                            </td>
-                            <td><a href="">
-                                    <div class="advices_info" id="advices_info">
-                                        <span class="title_article">Поради, які допоможуть поліпшити свою гру в CS: GO</span>
-                                        <span class="anotation_article"> Багато гравців в якийсь момент часу зупиняються в розвитку. На цьому етапі багато закидають гру. Однак не варто приймати поспішні рішення. Досить прочитати поради, які допоможуть вам поліпшити свою гру в CS: GO.</span>
-                                    </div>
-                                    <img src="create_config/config_title.jpg" alt="">
-                                </a></td>
-                            <td><a href="">
-                                    <div class="advices_info" id="advices_info">
-                                        <span class="title_article">Поради, які допоможуть поліпшити свою гру в CS: GO</span>
-                                        <span class="anotation_article"> Багато гравців в якийсь момент часу зупиняються в розвитку. На цьому етапі багато закидають гру. Однак не варто приймати поспішні рішення. Досить прочитати поради, які допоможуть вам поліпшити свою гру в CS: GO.</span>
-                                    </div>
-                                    <img src="kik_yourself/kik_yourself.jpg" alt="">
-                                </a></td>
-                            </tr>
+                        <td><a href="">
+                            <div class="advices_info" id="advices_info">
+                                <p><span>PLAYERUNKNOWN'S BATTLEGROUNDS</span>
+                            </p></div>
+                            <img src="pubg/pubg.jpg" alt="">
+                        </a></td>
+                        <td><a href="">
+                            <div class="advices_info" id="advices_info">
+                                <p><span>Fortnite</span>
+                            </p></div>
+                            <img src="fortnite/fortnite.jpg" alt="">
+                        </a></td>
+                        <td><a href="">
+                            <div class="advices_info" id="advices_info">
+                                <p><span>Overwatch</span>
+                            </p></div>
+                            <img src="overwatch/overwatch.jpg" alt="">
+                        </a></td>
+                        
+                    </tr>
+                    <tr>
+                        <td><a href="">
+                            <div class="advices_info" id="advices_info">
+                                <p><span>Arena of valor</span>
+                            </p></div>
+                            <img src="arena_of_valor/arena_of_valor.jpg" alt="">
+                        </a></td>
+                        <td><a href="">
+                            <div class="advices_info" id="advices_info">
+                                <p><span>Hearthstone</span>
+                            </p></div>
+                            <img src="hearthstone/hearthstone.jpg" alt="">
+                        </a></td>
+                        <td><a href="">
+                            <div class="advices_info" id="advices_info">
+                                <p><span>StarCraft2</span>
+                            </p></div>
+                            <img src="starcraft2/starcraft2.jpg" alt="">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">
+                            <div class="advices_info" id="advices_info">
+                                <p><span>Heroes of the storm</span>
+                            </p></div>
+                            <img src="heroes_of_the_storm/heroes_of_the_storm.png" alt="">
+                        </a></td>
+                        <td><a href="">
+                            <div class="advices_info" id="advices_info">
+                                <p><span>Різне online</span>
+                            </p></div>
+                            <img src="dif_online/diff.png" alt="">
+                        </a></td>
+                        <td><a href="">
+                            <div class="advices_info" id="advices_info">
+                                <p><span>Різне offline</span>
+                            </p></div>
+                            <img src="dif_ofline/diff_offline.png" alt="">
+                        </a></td>
+                    </tr>
                 </table>  
             </div>
         </div>          
@@ -128,7 +161,7 @@
                 <img src="../image/logo12.png" alt>
         </i>
         <div class="button footer_button1" id="button footer_button1">
-            <a href="">Зворотній зв'язок</a>
+            <a href="../comunication/comunication.html">Зворотній зв'язок</a>
         </div>
         <div class="icon" id="icon">
             <i class="icon icon_facebook" id="icon icon_facebook">
@@ -152,11 +185,10 @@
                 </a>
             </i>
         </div>
-        <p>Всі дані на сайті представлені вичключно для ознайомлення.<br>
+        <p>Всі дані представлені вичключно для ознайомлення.<br>
             Усі права захищені.
         @ 2021</p>        
-    </div>                           
-
+    </div>  
 
     </div>
 </div>
