--- a/comunication/comunication.html
+++ b/comunication/comunication.html
@@ -14,29 +14,28 @@
         <header class="wrap header_wrap">  
         </header>
         <div class="header_top" id="header_top">
-                <div class="button header_button1" id="button header_button1">
-                    <a href="">Головна</a>
-                </div>
-                <div class="button header_button2"id="button header_button2">
-                    <a href="">Новини</a>  
-                </div>
-                <div class="button header_button3" id="button header_button3">
-                    <a href="">Гайди</a>
-                </div>
-                <div class="button header_button4"id="button header_button4">
-                    <a href="">Поради</a>  
-                </div>
-                <div class="button header_button5" id="button header_button5">
-                    <a href="">Популярні стріми</a>
-                </div>
-                <div class="button header_button6"id="button header_button6">
-                    <a href="">Популярні ігри</a>  
-                </div>
-                <div class="button header_button7" id="button header_button7">
-                    <a href="">Генератор ігор</a>
-                </div>
-            </div>     
-             
+            <div class="button header_button1" id="button header_button1">
+                <a href="../index.html">Головна</a>
+            </div>
+            <div class="button header_button2"id="button header_button2">
+                <a href="../news/news.html">Новини</a>  
+            </div>
+            <div class="button header_button3" id="button header_button3">
+                <a href="../tutorials/tutorials.html">Гайди</a>
+            </div>
+            <div class="button header_button4"id="button header_button4">
+                <a href="../advices/advices.html">Поради</a>  
+            </div>
+            <div class="button header_button5" id="button header_button5">
+                <a href="../video/video.html">Популярні стріми</a>
+            </div>
+            <div class="button header_button6"id="button header_button6">
+                <a href="../games/games.html">Популярні ігри</a>  
+            </div>
+            <div class="button header_button7" id="button header_button7">
+                <a href="../generator/generation.html">Генератор ігор</a>
+            </div>
+        </div>               
     </div>
     <div class="main  wrap" id="main">   
         <div class="content" id="content">
@@ -47,6 +46,7 @@
                     <p>З допомоги форми зворотнього зв'язку, що знаходиться нижче, Ви можете відправити нам лист на тему, що вас тривожить. Протягом 3 діб ми ознайомимось з ним і обов'язково напишимо Вам відповідь на нього. Дуже дякуємо, що вибрали саме нас.</p>
                </div>
                     <form method="POST" class="form_comuniation">
+                                <!-- Hidden Required Fields -->
                         <div class="igroup">
                         <div class="communication" id="communication">
                             <img src="../icons/icons8-user-male.png"  alt>
@@ -76,6 +76,8 @@
                                 <button name="send_btn" class="send_btn" type="submit">Відправити</button>
                             </div>
                     </form>
+                    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+                    <script src="../js/"></script>
             </div>
         </div>          
         <div class="news_line" id="news_line">
@@ -111,7 +113,7 @@
                 <img src="../image/logo12.png" alt>
         </i>
         <div class="button footer_button1" id="button footer_button1">
-            <a href="">Зворотній зв'язок</a>
+            <a href="../comunication/comunication.html">Зворотній зв'язок</a>
         </div>
         <div class="icon" id="icon">
             <i class="icon icon_facebook" id="icon icon_facebook">
@@ -135,11 +137,10 @@
                 </a>
             </i>
         </div>
-        <p>Всі дані на сайті представлені вичключно для ознайомлення.<br>
+        <p>Всі дані представлені вичключно для ознайомлення.<br>
             Усі права захищені.
         @ 2021</p>        
-    </div>                           
-
+    </div>   
 
     </div>
 </div>
